===Commit Info=== - Added main menu ui elements

--- a/app/src/main/res/layout-xhdpi/fragment_email_ent.xml
+++ b/app/src/main/res/layout-xhdpi/fragment_email_ent.xml
@@ -56,6 +56,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
+        android:stateListAnimator="@null"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:text="@string/email_cont"
