--- a/app/src/main/res/layout-hdpi/fragment_email_ent.xml
+++ b/app/src/main/res/layout-hdpi/fragment_email_ent.xml
@@ -19,7 +19,7 @@
         android:layout_marginStart="16dp"
         android:text="@string/email_ask"
         android:textColor="@color/black"
-        android:textSize="32sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -30,8 +30,8 @@
         android:layout_below="@id/textView_your_email"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
         android:hint="@string/email"
         app:boxStrokeColor="@color/light_pink"
         app:boxStrokeWidth="1dp"
@@ -42,15 +42,17 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editText_email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:ems="10"
+            android:paddingVertical="1dp"
+            android:textSize="14sp"
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/button_email_cont"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/editText_email_layout"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="16dp"
@@ -58,9 +60,10 @@
         android:layout_marginRight="16dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:stateListAnimator="@null"
         android:text="@string/email_cont"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:icon="@android:drawable/ic_dialog_email"
         app:iconGravity="textStart" />
 
