--- a/app/src/main/res/layout-ldpi/fragment_login.xml
+++ b/app/src/main/res/layout-ldpi/fragment_login.xml
@@ -5,71 +5,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
+
     <TextView
         android:id="@+id/textView_Welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
         android:text="@string/welcome"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="32sp" />
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="226dp"
-        android:layout_height="203dp"
+        android:layout_width="180dp"
+        android:layout_height="150dp"
         android:layout_below="@+id/textView_Welcome"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="40dp"
         app:srcCompat="@drawable/ic_message" />
 
     <Button
         android:id="@+id/button_email_cont"
         style="@style/Widget.MaterialComponents.Button.Icon"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:stateListAnimator="@null"
         android:text="@string/email_cont"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:icon="@android:drawable/ic_dialog_email"
-        app:iconGravity="textStart"/>
+        app:iconGravity="textStart" />
 
     <Button
         android:id="@+id/button_google_cont"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/button_email_cont"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:text="@string/google_cont"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:icon="@drawable/ic_google"
         app:iconGravity="textStart"
         app:iconTint="@null"
+
         app:strokeWidth="1dp" />
 
     <Button
         android:id="@+id/button_apple_cont"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/button_google_cont"
         android:layout_alignStart="@id/button_google_cont"
         android:layout_marginTop="24dp"
@@ -85,8 +87,8 @@
     <Button
         android:id="@+id/button_fb_cont"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/button_google_cont"
         android:layout_alignEnd="@id/button_google_cont"
         android:layout_marginTop="24dp"
@@ -109,7 +111,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
         android:gravity="center_horizontal"
         android:text="@string/terms" />
 </RelativeLayout>
