--- a/app/src/main/res/layout-xxhdpi/fragment_login.xml
+++ b/app/src/main/res/layout-xxhdpi/fragment_login.xml
@@ -33,16 +33,16 @@
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:stateListAnimator="@null"
         android:text="@string/email_cont"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:icon="@android:drawable/ic_dialog_email"
-        app:iconGravity="textStart"/>
+        app:iconGravity="textStart" />
 
     <Button
         android:id="@+id/button_google_cont"
@@ -50,11 +50,11 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@+id/button_email_cont"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:text="@string/google_cont"
@@ -63,12 +63,13 @@
         app:icon="@drawable/ic_google"
         app:iconGravity="textStart"
         app:iconTint="@null"
+
         app:strokeWidth="1dp" />
 
     <Button
         android:id="@+id/button_apple_cont"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
-        android:layout_width="180dp"
+        android:layout_width="140dp"
         android:layout_height="50dp"
         android:layout_below="@+id/button_google_cont"
         android:layout_alignStart="@id/button_google_cont"
@@ -85,12 +86,11 @@
     <Button
         android:id="@+id/button_fb_cont"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
-        android:layout_width="180dp"
+        android:layout_width="140dp"
         android:layout_height="50dp"
         android:layout_below="@+id/button_google_cont"
         android:layout_alignEnd="@id/button_google_cont"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="-1dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:text="@null"
@@ -109,7 +109,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
         android:gravity="center_horizontal"
         android:text="@string/terms" />
 </RelativeLayout>
