--- a/app/src/main/res/menu/action_bar_back_button.xml
+++ b/app/src/main/res/menu/action_bar_back_button.xml
@@ -5,6 +5,5 @@
     <item android:id="@+id/back_button"
         android:icon="@drawable/ic_action_back_button"
         android:title=""
-        app:showAsAction="always"
-        />
+        app:showAsAction="always" />
 </menu>
