--- a/core/ui/src/main/res/values/themes.xml
+++ b/core/ui/src/main/res/values/themes.xml
@@ -1,10 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.NGS_Test_Login" parent="Theme.MaterialComponents.Light">
+    <style name="Base.V24.Theme.NGS_Test_Login" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_pink</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">@color/teal_200</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -13,11 +14,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <item name="android:fontFamily" >@font/roboto_regular_family</item>
         <item name="android:navigationBarColor">@color/light_pink</item>
+        <item name="android:actionBarTabTextStyle">@id/center</item>
+
+        <!-- View Styles -->
+        <item name="android:button">@style/Widget.NGS_Test_Login.Button</item>
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="HiddenTitleTheme" parent="Theme.NGS_Test_Login">
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">true</item>
+    <style name="Theme.NGS_Test_Login." parent="Base.V24.Theme.NGS_Test_Login">
     </style>
 </resources>
