--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_pink">#FF8686</color>
+    <color name="lighter_pink">#FFC2C2</color>
+    <color name="grey">#C1C1C1</color>
+    <color name="light_grey">#F0F0F0</color>
+    <color name="light_blue">#489CDC</color>
 </resources>
