--- a/core/ui/src/main/res/values/themes.xml
+++ b/core/ui/src/main/res/values/themes.xml
@@ -11,16 +11,30 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
-        <item name="android:fontFamily" >@font/roboto_regular_family</item>
+        <item name="android:statusBarColor">@color/light_pink</item>
         <item name="android:navigationBarColor">@color/light_pink</item>
-        <item name="android:actionBarTabTextStyle">@id/center</item>
+        <item name="android:windowLightStatusBar">true</item>
+
+        <!-- Fonts -->
+        <item name="android:fontFamily">@font/roboto_regular_family</item>
 
         <!-- View Styles -->
         <item name="android:button">@style/Widget.NGS_Test_Login.Button</item>
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.NGS_Test_Login." parent="Base.V24.Theme.NGS_Test_Login">
+    <style name="Theme.NGS_Test_Login.Main" parent="Base.V24.Theme.NGS_Test_Login">
+        <item name="colorPrimary">@color/light_grey</item>
+
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/light_grey</item>
+        <item name="android:navigationBarColor">@color/light_grey</item>
+
+        <item name="actionBarStyle">@style/Widget.NGS_Test_Login.ActionBar</item>
+
+        <item name="textInputOutlinedStyle">@style/Widget.NGS_Test_Login.TextInput</item>
     </style>
+
+    <!-- Style for Login -->
+    <style name="Theme.NGS_Test_Login.Login" parent="Base.V24.Theme.NGS_Test_Login" />
 </resources>
