--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
         android:layout_above="@id/main_navigation_bar"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
+        android:elevation="1dp"
         app:icon = "@drawable/ic_add"
         app:iconGravity = "textStart"
         app:iconPadding="0dp"/>
