===Commit Info=== - Added main menu Sockets for Lists and Chats, their back-end realization - Added main menu Sockets for Lists and Chats, their front-end realization, including navigation between fragments, based fully on JetPack's Navigation.

--- a/app/src/main/res/layout/fragment_main_add_list.xml
+++ b/app/src/main/res/layout/fragment_main_add_list.xml
@@ -19,7 +19,7 @@
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_camera" />
+            app:srcCompat="@drawable/ic_camera"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/main_add_list_name_layout"
@@ -73,5 +73,33 @@
         app:icon="@drawable/ic_add"
         app:iconTint = "@color/light_pink"/>
 
+    <Button
+        android:id="@+id/main_add_list_create_button"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="Create"
+        android:background="@null"
+        android:textColor="@color/light_pink"
+        android:textSize="18sp" />
 
+    <Button
+        android:id="@+id/main_add_list_cancel_button"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="16dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="Cancel"
+        android:background="@null"
+        android:textColor="@color/light_pink"
+        android:textSize="18sp" />
 </RelativeLayout>
