--- a/app/src/main/res/layout/fragment_main_add_chat.xml
+++ b/app/src/main/res/layout/fragment_main_add_chat.xml
@@ -72,4 +72,34 @@
         android:textSize="18sp"
         app:icon="@drawable/ic_add"
         app:iconTint = "@color/light_pink"/>
+
+    <Button
+        android:id="@+id/main_add_chat_create_button"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="Create"
+        android:background="@null"
+        android:textColor="@color/light_pink"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/main_add_chat_cancel_button"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="16dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="Cancel"
+        android:background="@null"
+        android:textColor="@color/light_pink"
+        android:textSize="18sp" />
 </RelativeLayout>
