--- a/app/src/main/res/menu/action_bar_main_menu.xml
+++ b/app/src/main/res/menu/action_bar_main_menu.xml
@@ -12,9 +12,7 @@
     <item
         android:id="@+id/action_account"
         android:icon="@drawable/ic_account"
-        android:iconTint="@color/light_pink"
         android:title="@string/account"
-        app:showAsAction="always"
-        tools:targetApi="o" />
+        app:showAsAction="ifRoom" />
 
 </menu>
