--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -38,4 +38,20 @@
         <item name="cornerSize">20%</item>
     </style>
 
+
+    //Profile Styles
+    <style name="TextAppearance.NGS_Profile.TextAppearance.Heading" parent="TextAppearance.Material3.DisplayMedium">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TextAppearance.NGS_Profile.TextAppearance.Normal" parent="TextAppearance.Material3.DisplayMedium">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TextAppearance.NGS_Profile.TextAppearance.Small" parent="TextAppearance.Material3.DisplayMedium">
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
