--- a/app/src/main/res/navigation/main_opening_navigation.xml
+++ b/app/src/main/res/navigation/main_opening_navigation.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/mainFragment3">
     <fragment
         android:id="@+id/mainFragment3"
-        android:name="com.example.ngs_test_login.MainActivity.Presentation.Fragments.MainFragment"
+        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainFragment"
         android:label="MainFragment"
         tools:layout="@layout/fragment_main">
         <action
@@ -18,12 +18,12 @@
     </fragment>
     <fragment
         android:id="@+id/mainAddFragment"
-        android:name="com.example.ngs_test_login.MainActivity.Presentation.Fragments.MainAddFragment"
+        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainAddFragment"
         android:label="MainAddFragment"
         tools:layout="@layout/fragment_main_add"/>
     <fragment
         android:id="@+id/mainProfileFragment"
-        android:name="com.example.ngs_test_login.MainActivity.Presentation.Fragments.MainProfileFragment"
+        android:name="com.example.ngs_test_login.MainActivity.Presentation.User.Fragments.MainProfileFragment"
         android:label="MainProfileFragment"
         tools:layout="@layout/fragment_profile"/>
 </navigation>
