--- a/app/src/main/res/layout/fragment_profile_user_settings.xml
+++ b/app/src/main/res/layout/fragment_profile_user_settings.xml
@@ -5,9 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/profile_user_info_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="16dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/profile_user_info_icon"
+            android:src="@mipmap/ic_launcher_round"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/profile_user_info_name"
+            android:text="@string/name"
+            android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Normal"/>
+        <TextView
+            android:id="@+id/profile_user_info_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/email"
+            android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Small" />
+    </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/profile_user_info_layout"
         android:id="@+id/profile_options_cardView"
         android:layout_margin="10dp">
         <LinearLayout
@@ -16,26 +45,35 @@
             android:id="@+id/profile_options_layout"
             android:orientation="vertical">
             <LinearLayout
-                android:id="@+id/main_profile_general_settings_layout"
+                android:id="@+id/profile_user_name_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:clickable="true"
                 android:gravity="center_vertical"
                 android:focusable="true">
-                <TextView
-                    android:id="@+id/main_profile_general_settings_TV"
+                <EditText
+                    android:id="@+id/profile_user_name_editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/name"
+                    android:hint="@string/name"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Normal"/>
-                <ImageView
+                <Button
+                    android:id="@+id/profile_user_name_button"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/ic_edit"
-                    android:layout_weight="0.1"/>
+                    android:layout_weight="0.1"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:layout_gravity="center"
+                    android:text="@null"
+                    app:icon="@drawable/ic_edit"
+                    app:iconTint="@color/light_pink"
+                    app:iconGravity="textStart"
+                    app:strokeWidth="0dp"/>
             </LinearLayout>
 
             <View
@@ -49,18 +87,28 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
-                <TextView
+                <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/email"
+                    android:id="@+id/profile_user_email_editText"
+                    android:hint="@string/email"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Normal"/>
-                <ImageView
+                <Button
+                    android:id="@+id/profile_user_email_button"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/ic_edit"
-                    android:layout_weight="0.1"/>
+                    android:layout_weight="0.1"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:layout_gravity="center"
+                    android:text="@null"
+                    app:icon="@drawable/ic_edit"
+                    app:iconTint="@color/light_pink"
+                    app:iconGravity="textStart"
+                    app:strokeWidth="0dp"/>
             </LinearLayout>
 
             <View
@@ -74,18 +122,28 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
-                <TextView
+                <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/password"
+                    android:id="@+id/profile_user_password_editText"
+                    android:hint="@string/password"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Normal" />
-                <ImageView
+                <Button
+                    android:id="@+id/profile_user_password_button"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/ic_edit"
-                    android:layout_weight="0.1"/>
+                    android:layout_weight="0.1"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:layout_gravity="center"
+                    android:text="@null"
+                    app:icon="@drawable/ic_edit"
+                    app:iconTint="@color/light_pink"
+                    app:iconGravity="textStart"
+                    app:strokeWidth="0dp"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
