===Commit Info=== - Filled blank tables of Chats' and Lists' DBs - Main parts of chats and lists are available offline now

--- a/app/src/main/res/layout/main_chats_item.xml
+++ b/app/src/main/res/layout/main_chats_item.xml
@@ -30,6 +30,7 @@
                     android:layout_height="wrap_content"
 
                     android:text="C"
+                    android:textColor="@color/white"
                     android:textSize="56sp" />
             </RelativeLayout>
 
