===Commit Info=== - Added Lists' navigation logic - Stable version with offline working fully with User's data, and atomically with Lists' and Chats' data.

--- a/app/src/main/res/navigation/main_add_list_to_main_opening.xml
+++ b/app/src/main/res/navigation/main_add_list_to_main_opening.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainAddListFragment"
-        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainAddListFragment"
+        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainAddFragments.MainAddListFragment"
         android:label="MainAddListFragment"
         tools:layout="@layout/fragment_main_add_list">
         <action
