--- a/app/src/main/res/navigation/main_add_navigation.xml
+++ b/app/src/main/res/navigation/main_add_navigation.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/navigation_mainAddListFragment"
-        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainAddListFragment"
+        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainAddFragments.MainAddListFragment"
         android:label="@string/add_new"
         tools:layout="@layout/fragment_main_add_list"/>
     <fragment
         android:id="@+id/navigation_mainAddChatFragment"
-        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainAddChatFragment"
+        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainAddFragments.MainAddChatFragment"
         android:label="@string/add_new"
         tools:layout="@layout/fragment_main_add_chat"/>
     <fragment
         android:id="@+id/navigation_mainAddShortcutFragment"
-        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainAddShortcutFragment"
+        android:name="com.example.ngs_test_login.MainActivity.Presentation.Main.Fragments.MainAddFragments.MainAddShortcutFragment"
         android:label="@string/add_new"
         tools:layout="@layout/fragment_main_add_shortcut"/>
 </navigation>
