--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="grey">#C1C1C1</color>
     <color name="light_grey">#F0F0F0</color>
     <color name="light_blue">#489CDC</color>
+    <color name="semi_transparent_black">#5E000000</color>
 </resources>
